--- a/login.html
+++ b/login.html
@@ -4,10 +4,45 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Welcome to AgriLearnNetwork</title>
+  <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="login.css">
-  <link rel="icon" href="favicon_new.png" type="image/x-icon" />
+  <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
+    <link rel="icon" href="favicon_new.png" type="image/x-icon" />
+    <link rel="stylesheet" type="text/css" href="./style.css" />
 </head>
 <body>
+  <header class="header">
+    <img
+      src="favicon_new.png"
+      alt="logo"
+      style="height: 50px; width: 50px; margin-right: 10px;"
+    />
+    <a href="#" class="logo" style="margin-inline-end: auto"
+      ><h3>AgriLearnNetwork</h3>
+    </a>
+
+    <i class="bx bx-menu" id="menu-icon"></i>
+    <nav class="navbar">
+      <a href="index.html#home" class="active"
+        ><i class="fa-solid fa-house"></i> Home</a
+      >
+      <a href="index.html#about"><i class="fa-solid fa-circle-info"></i> About</a>
+      <a href="blogpage.html" target="_self">
+        <i class="fa-solid fa-blog"></i> Blogs</a
+      >
+      <a href="index.html#Resource Library"
+        ><i class="fa-solid fa-book"></i> Resource Library</a
+      >
+      <a href="faqpage.html" target="_self"><i class="fas fa-question-circle"></i>FAQ</a>
+      <a href="index.html#contact" id="nav--contact"
+        ><i class="fa-solid fa-phone"></i> Contact</a
+      >
+    </nav>
+  </header>
+  
   <div class="wrapper">
     <form id="login-form">
       <h2>Login</h2>
@@ -31,6 +66,8 @@
         <p>Don't have an account? <a href="#register-form">Register</a></p>
       </div>
     </form>
+
+
     <form id="register-form" style="display: none;">
       <h2>Register</h2>
       <div class="input-field">
@@ -44,7 +81,69 @@
       <button type="submit">Register</button>
     </form>
   </div>
+  
+  <footer class="footer">
+    <div class="footer-grid">
+      <div class="footer-title">
+        <h2>AgriLearnNetwork</h2>
+      </div>
+      <div class="footer-icons">
+        <p><b>Follow us on our socials:</b></p>
+        <div class="socialIcons">
+          <a
+            href="mailto:AgriLearnNetwork@gmail.com"
+            class="email-link"
+            data-tooltip="AgriLearnNetwork@gmail.com"
+            ><i class="fas fa-envelope"></i
+          ></a>
+          <a
+            href="https://www.instagram.com/your_username_here"
+            target="_blank"
+            ><i class="fab fa-instagram"></i
+          ></a>
+          <a href="https://twitter.com/your_username_here" target="_blank"
+            ><i class="fa-brands fa-x-twitter"></i
+          ></a>
+          <a
+            href="https://www.facebook.com/your_page_or_profile_here"
+            target="_blank"
+            ><i class="fab fa-facebook"></i
+          ></a>
+        </div>
+      </div>
+    </div>
+    <div class="quick-links">
+      <h2>Quick Links</h2>
+      <ul>
+        <li>
+          <a href="index.html#home"><p>Home</p></a>
+        </li>
+        <li>
+          <a href="index.html#about"><p>About Us</p></a>
+        </li>
+        <li>
+          <a href="blogpage.html"><p>Blogs</p></a>
+        </li>
+        <li>
+          <a href="index.html#Resource Library"><p>Resource Library</p></a>
+        </li>
+        <li>
+          <a href="index.html#contact"><p>Contact Us</p></a>
+        </li>
+      </ul>
+    </div>
+    <div class="footer-text footer-right">
+      <p style="font-weight: 600; font-size: 15px">
+        Copyright &copy;
+        <script>
+          document.write(new Date().getFullYear());
+        </script>
+        by AgriLearnNetwork | All Rights Reserved.
+      </p>
+    </div>
+  </footer>
   <script src="login.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
 
