Fix broken back-to-top link in footer

--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
       </div>
     </footer>
     <div  id="backtoTop">
-      <a href="#home"><i class="bx bx-up-arrow-alt"></i></a>
+      <a href="#"><i class="bx bx-up-arrow-alt"></i></a>
     </div>
 
     <script src="https://unpkg.com/scrollreveal"></script>
