--- a/login.html
+++ b/login.html
@@ -4,14 +4,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Welcome to AgriLearnNetwork</title>
-  <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="login.css">
   <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="style.css" />
+
     <link rel="icon" href="favicon_new.png" type="image/x-icon" />
     <link rel="stylesheet" type="text/css" href="./style.css" />
+    <script
+      src="https://kit.fontawesome.com/b08b6de27e.js"
+      crossorigin="anonymous"
+    ></script>
 </head>
 <body>
   <header class="header">
