Fixed Blog and Home Navbar Elements

--- a/blogpage.html
+++ b/blogpage.html
@@ -47,6 +47,7 @@
         <a href="index.html#Resource Library"
           ><i class="fa-solid fa-book"></i> Resource Library</a
         >
+        <!-- <a href="faqpage.html" target="_self"><i class="fas fa-question-circle"></i>FAQ</a> -->
         <a href="index.html#contact" id="nav--contact"
           ><i class="fa-solid fa-phone"></i> Contact</a
         >
