--- a/index.html
+++ b/index.html
@@ -401,6 +401,9 @@
             <a href="blogpage.html"><p>Blogs</p></a>
           </li>
           <li>
+            <a href="faqpage.html"><p>FAQ</p></a>
+          </li>
+          <li>
             <a href="#Resource Library"><p>Resource Library</p></a>
           </li>
           <li>
