--- a/faqpage.html
+++ b/faqpage.html
@@ -184,16 +184,16 @@
         </div>
       </div>
     </div>
-    <div class="quick-links">
+<div class="quick-links">
       <h2>Quick Links</h2>
       <ul>
         <li>
-          <a href="/">
+          <a href="index.html#home">
             <p>Home</p>
           </a>
         </li>
         <li>
-          <a href="/">
+          <a href="index.html#about">
             <p>About Us</p>
           </a>
         </li>
@@ -203,7 +203,7 @@
           </a>
         </li>
         <li>
-          <a href="/">
+          <a href="index.html#Resource Library">
             <p>Resource Library</p>
           </a>
         </li>
@@ -213,7 +213,7 @@
           </a>
         </li>
         <li>
-          <a href="/">
+          <a href="index.html#contact">
             <p>Contact Us</p>
           </a>
         </li>
