--- a/login.html
+++ b/login.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Welcome to AgriLearnNetwork</title>
-  <script src="https://kit.fontawesome.com/f2e55912f8.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="login.css">
-  <link
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Welcome to AgriLearnNetwork</title>
+    <script
+      src="https://kit.fontawesome.com/f2e55912f8.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="login.css" />
+    <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
@@ -19,141 +22,155 @@
       src="https://kit.fontawesome.com/b08b6de27e.js"
       crossorigin="anonymous"
     ></script>
-</head>
-<body>
-  <header class="header">
-    <img
-      src="favicon_new.png"
-      alt="logo"
-      style="height: 50px; width: 50px; margin-right: 10px;"
-    />
-    <a href="#" class="logo" style="margin-inline-end: auto"
-      ><h3>AgriLearnNetwork</h3>
-    </a>
+  </head>
+  <body>
+    <header class="header">
+      <img
+        src="favicon_new.png"
+        alt="logo"
+        style="height: 50px; width: 50px; margin-right: 10px"
+      />
+      <a href="#" class="logo" style="margin-inline-end: auto"
+        ><h3>AgriLearnNetwork</h3>
+      </a>
 
-    <i class="bx bx-menu" id="menu-icon"></i>
-    <nav class="navbar">
-      <a href="index.html#home" class="active"
-        ><i class="fa-solid fa-house"></i> Home</a
-      >
-      <a href="index.html#about"><i class="fa-solid fa-circle-info"></i> About</a>
-      <a href="blogpage.html" target="_self">
-        <i class="fa-solid fa-blog"></i> Blogs</a
-      >
-      <a href="index.html#Resource Library"
-        ><i class="fa-solid fa-book"></i> Resource Library</a
-      >
-      <a href="faqpage.html" target="_self"><i class="fas fa-question-circle"></i>FAQ</a>
-      <a href="index.html#contact" id="nav--contact"
-        ><i class="fa-solid fa-phone"></i> Contact</a
-      >
-    </nav>
-  </header>
-  
-  <div class="wrapper">
-    <form id="login-form">
-      <h2>Login</h2>
-      <div class="input-field">
-        <input type="text" required>
-        <label>Enter your email</label>
-      </div>
-      <div class="input-field">
-        <input type="password" id="login-password" required>
-        <button type="button" id="toggle-login-password"><i class="fas fa-eye"></i></button>
-        <label>Enter your password</label>
-      </div>
-      <div class="forget">
-        <label for="remember">
-          <input type="checkbox" id="remember">
-          <p>Remember me</p>
-        </label>
-        <a href="#">Forgot password?</a>
-      </div>
-      <button type="submit">Log In</button>
-      <div class="register">
-        <p>Don't have an account? <a href="#register-form">Register</a></p>
-      </div>
-    </form>
+      <i class="bx bx-menu" id="menu-icon"></i>
+      <nav class="navbar">
+        <a href="index.html#home" class="active"
+          ><i class="fa-solid fa-house"></i> Home</a
+        >
+        <a href="index.html#about"
+          ><i class="fa-solid fa-circle-info"></i> About</a
+        >
+        <a href="blogpage.html" target="_self">
+          <i class="fa-solid fa-blog"></i> Blogs</a
+        >
+        <a href="index.html#Resource Library"
+          ><i class="fa-solid fa-book"></i> Resource Library</a
+        >
+        <a href="faqpage.html" target="_self"
+          ><i class="fas fa-question-circle"></i>FAQ</a
+        >
+        <a href="index.html#contact" id="nav--contact"
+          ><i class="fa-solid fa-phone"></i> Contact</a
+        >
+      </nav>
+    </header>
 
-
-    <form id="register-form" style="display: none;">
-      <h2>Register</h2>
-      <div class="input-field">
-        <input type="text" required>
-        <label>Enter your email</label>
+    <div class="container" id="container">
+      <div class="form-container sign-up">
+        <form>
+          <h1>Create Account</h1>
+          <div class="social-icons">
+            <a href="#" class="icon"
+              ><i class="fa-brands fa-google-plus-g"></i
+            ></a>
+            <a href="#" class="icon"><i class="fa-brands fa-github"></i></a>
+            <a href="#" class="icon"
+              ><i class="fa-brands fa-linkedin-in"></i
+            ></a>
+          </div>
+          <span>or use your email for registeration</span>
+          <input type="text" placeholder="Name" />
+          <input type="email" placeholder="Email" />
+          <input type="password" placeholder="Password" />
+          <button>Sign Up</button>
+        </form>
       </div>
-      <div class="input-field">
-        <input type="password" id="register-password" required>
-        <button type="button" id="toggle-register-password"><i class="fas fa-eye"></i></button>
-        <!-- <button type="button" class="toggle-password" id="togglePassword"><i class="fas fa-eye"></i></button> -->
-        <label>Choose a password</label>
+      <div class="form-container sign-in">
+        <form>
+          <h1>Sign In</h1>
+          <div class="social-icons">
+            <a href="#" class="icon"
+              ><i class="fa-brands fa-google-plus-g"></i
+            ></a>
+            <a href="#" class="icon"><i class="fa-brands fa-github"></i></a>
+            <a href="#" class="icon"
+              ><i class="fa-brands fa-linkedin-in"></i
+            ></a>
+          </div>
+          <span>or use your email password</span>
+          <input type="email" placeholder="Email" />
+          <input type="password" placeholder="Password" />
+          <a href="#">Forget Your Password?</a>
+          <button>Sign In</button>
+        </form>
       </div>
-      <button type="submit">Register</button>
-    </form>
-  </div>
-  
-  <footer class="footer">
-    <div class="footer-grid">
-      <div class="footer-title">
-        <h2>AgriLearnNetwork</h2>
-      </div>
-      <div class="footer-icons">
-        <p><b>Follow us on our socials:</b></p>
-        <div class="socialIcons">
-          <a
-            href="mailto:AgriLearnNetwork@gmail.com"
-            class="email-link"
-            data-tooltip="AgriLearnNetwork@gmail.com"
-            ><i class="fas fa-envelope"></i
-          ></a>
-          <a
-            href="https://www.instagram.com/your_username_here"
-            target="_blank"
-            ><i class="fab fa-instagram"></i
-          ></a>
-          <a href="https://twitter.com/your_username_here" target="_blank"
-            ><i class="fa-brands fa-x-twitter"></i
-          ></a>
-          <a
-            href="https://www.facebook.com/your_page_or_profile_here"
-            target="_blank"
-            ><i class="fab fa-facebook"></i
-          ></a>
+      <div class="toggle-container">
+        <div class="toggle">
+          <div class="toggle-panel toggle-left">
+            <h1 style="color: white; padding: 20px">Hello, Friend!</h1>
+            <button class="hidden" id="login">Sign In</button>
+          </div>
+          <div class="toggle-panel toggle-right">
+            <h1 style="color: white; padding: 20px">Welcome Back!</h1>
+            <button class="hidden" id="register">Sign Up</button>
+          </div>
         </div>
       </div>
     </div>
-    <div class="quick-links">
-      <h2>Quick Links</h2>
-      <ul>
-        <li>
-          <a href="index.html#home"><p>Home</p></a>
-        </li>
-        <li>
-          <a href="index.html#about"><p>About Us</p></a>
-        </li>
-        <li>
-          <a href="blogpage.html"><p>Blogs</p></a>
-        </li>
-        <li>
-          <a href="index.html#Resource Library"><p>Resource Library</p></a>
-        </li>
-        <li>
-          <a href="index.html#contact"><p>Contact Us</p></a>
-        </li>
-      </ul>
-    </div>
-    <div class="footer-text footer-right">
-      <p style="font-weight: 600; font-size: 15px">
-        Copyright &copy;
-        <script>
-          document.write(new Date().getFullYear());
-        </script>
-        by AgriLearnNetwork | All Rights Reserved.
-      </p>
-    </div>
-  </footer>
-  <script src="login.js"></script>
-  <script src="script.js"></script>
-</body>
-</html>
 
+    <footer class="footer">
+      <div class="footer-grid">
+        <div class="footer-title">
+          <h2>AgriLearnNetwork</h2>
+        </div>
+        <div class="footer-icons">
+          <p><b>Follow us on our socials:</b></p>
+          <div class="socialIcons">
+            <a
+              href="mailto:AgriLearnNetwork@gmail.com"
+              class="email-link"
+              data-tooltip="AgriLearnNetwork@gmail.com"
+              ><i class="fas fa-envelope"></i
+            ></a>
+            <a
+              href="https://www.instagram.com/your_username_here"
+              target="_blank"
+              ><i class="fab fa-instagram"></i
+            ></a>
+            <a href="https://twitter.com/your_username_here" target="_blank"
+              ><i class="fa-brands fa-x-twitter"></i
+            ></a>
+            <a
+              href="https://www.facebook.com/your_page_or_profile_here"
+              target="_blank"
+              ><i class="fab fa-facebook"></i
+            ></a>
+          </div>
+        </div>
+      </div>
+      <div class="quick-links">
+        <h2>Quick Links</h2>
+        <ul>
+          <li>
+            <a href="index.html#home"><p>Home</p></a>
+          </li>
+          <li>
+            <a href="index.html#about"><p>About Us</p></a>
+          </li>
+          <li>
+            <a href="blogpage.html"><p>Blogs</p></a>
+          </li>
+          <li>
+            <a href="index.html#Resource Library"><p>Resource Library</p></a>
+          </li>
+          <li>
+            <a href="index.html#contact"><p>Contact Us</p></a>
+          </li>
+        </ul>
+      </div>
+      <div class="footer-text footer-right">
+        <p style="font-weight: 600; font-size: 15px">
+          Copyright &copy;
+          <script>
+            document.write(new Date().getFullYear());
+          </script>
+          by AgriLearnNetwork | All Rights Reserved.
+        </p>
+      </div>
+    </footer>
+    <script src="login.js"></script>
+    <script src="script.js"></script>
+  </body>
+</html>
