--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
         <a href="#Resource Library"
           ><i class="fa-solid fa-book"></i> Resource Library</a
         >
+        <a href="buy-product.html"
+          ><i class="fa-solid fa-book"></i>Services</a
+        >
         <a href="faqpage.html" target="_self"><i class="fas fa-question-circle"></i>FAQ</a>
         <a href="#contact" id="nav--contact"
           ><i class="fa-solid fa-phone"></i> Contact</a
