--- a/faqpage.html
+++ b/faqpage.html
@@ -17,7 +17,7 @@
 
 <body>
   <header class="header">
-    <img src="images/favicon.png" alt="logo" style="height: 50px; width: 50px; margin-right: 10px" />
+    <img src="favicon_new.png" alt="logo" style="height: 50px; width: 50px; margin-right: 10px" />
     <a href="#" class="logo" style="margin-inline-end: auto">
       <h3>AgriLearnNetwork</h3>
     </a>
