Revert "Add/Allow google Login #762"

--- a/login.html
+++ b/login.html
@@ -1,42 +1,55 @@
 <!DOCTYPE html>
 <html>
-
 <head>
   <meta charset="UTF-8">
-  <script src="https://accounts.google.com/gsi/client" async defer></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Welcome to AgriLearnNetwork</title>
   <script src="https://kit.fontawesome.com/f2e55912f8.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="login.css">
-  <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
-  <link rel="stylesheet" href="style.css" />
+  <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
 
-
-  <link rel="icon" href="favicon_new.png" type="image/x-icon" />
-  <link rel="stylesheet" type="text/css" href="./style.css" />
-  <script src="https://kit.fontawesome.com/b08b6de27e.js" crossorigin="anonymous"></script>
+    <link rel="icon" href="favicon_new.png" type="image/x-icon" />
+    <link rel="stylesheet" type="text/css" href="./style.css" />
+    <script
+      src="https://kit.fontawesome.com/b08b6de27e.js"
+      crossorigin="anonymous"
+    ></script>
 </head>
-
 <body>
   <header class="header">
-    <img src="favicon_new.png" alt="logo" style="height: 50px; width: 50px; margin-right: 10px;" />
-    <a href="#" class="logo" style="margin-inline-end: auto">
-      <h3>AgriLearnNetwork</h3>
+    <img
+      src="favicon_new.png"
+      alt="logo"
+      style="height: 50px; width: 50px; margin-right: 10px;"
+    />
+    <a href="#" class="logo" style="margin-inline-end: auto"
+      ><h3>AgriLearnNetwork</h3>
     </a>
 
     <i class="bx bx-menu" id="menu-icon"></i>
     <nav class="navbar">
-      <a href="index.html#home" class="active"><i class="fa-solid fa-house"></i> Home</a>
+      <a href="index.html#home" class="active"
+        ><i class="fa-solid fa-house"></i> Home</a
+      >
       <a href="index.html#about"><i class="fa-solid fa-circle-info"></i> About</a>
       <a href="blogpage.html" target="_self">
-        <i class="fa-solid fa-blog"></i> Blogs</a>
-      <a href="index.html#Resource Library"><i class="fa-solid fa-book"></i> Resource Library</a>
+        <i class="fa-solid fa-blog"></i> Blogs</a
+      >
+      <a href="index.html#Resource Library"
+        ><i class="fa-solid fa-book"></i> Resource Library</a
+      >
       <a href="faqpage.html" target="_self"><i class="fas fa-question-circle"></i>FAQ</a>
-      <a href="index.html#contact" id="nav--contact"><i class="fa-solid fa-phone"></i> Contact</a>
+      <a href="index.html#contact" id="nav--contact"
+        ><i class="fa-solid fa-phone"></i> Contact</a
+      >
     </nav>
   </header>
-
+  
   <div class="wrapper">
     <form id="login-form">
       <h2>Login</h2>
@@ -57,12 +70,6 @@
         <a href="#">Forgot password?</a>
       </div>
       <button type="submit">Log In</button>
-      <div id="g_id_onload" data-client_id="161848051138-1uii574n97v29up5ft2ls36rkofgruq1.apps.googleusercontent.com"
-        data-login_uri="login.html" data-auto_prompt="false">
-      </div>
-      <div class="g_id_signin" data-type="standard" data-size="large" data-theme="outline" data-text="sign_in_with"
-        data-shape="rectangular" data-logo_alignment="left">
-      </div>
       <div class="register">
         <p>Don't have an account? <a href="#register-form">Register</a></p>
       </div>
@@ -84,7 +91,7 @@
       <button type="submit">Register</button>
     </form>
   </div>
-
+  
   <footer class="footer">
     <div class="footer-grid">
       <div class="footer-title">
@@ -93,12 +100,25 @@
       <div class="footer-icons">
         <p><b>Follow us on our socials:</b></p>
         <div class="socialIcons">
-          <a href="mailto:AgriLearnNetwork@gmail.com" class="email-link" data-tooltip="AgriLearnNetwork@gmail.com"><i
-              class="fas fa-envelope"></i></a>
-          <a href="https://www.instagram.com/your_username_here" target="_blank"><i class="fab fa-instagram"></i></a>
-          <a href="https://twitter.com/your_username_here" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
-          <a href="https://www.facebook.com/your_page_or_profile_here" target="_blank"><i
-              class="fab fa-facebook"></i></a>
+          <a
+            href="mailto:AgriLearnNetwork@gmail.com"
+            class="email-link"
+            data-tooltip="AgriLearnNetwork@gmail.com"
+            ><i class="fas fa-envelope"></i
+          ></a>
+          <a
+            href="https://www.instagram.com/your_username_here"
+            target="_blank"
+            ><i class="fab fa-instagram"></i
+          ></a>
+          <a href="https://twitter.com/your_username_here" target="_blank"
+            ><i class="fa-brands fa-x-twitter"></i
+          ></a>
+          <a
+            href="https://www.facebook.com/your_page_or_profile_here"
+            target="_blank"
+            ><i class="fab fa-facebook"></i
+          ></a>
         </div>
       </div>
     </div>
@@ -106,29 +126,19 @@
       <h2>Quick Links</h2>
       <ul>
         <li>
-          <a href="index.html#home">
-            <p>Home</p>
-          </a>
+          <a href="index.html#home"><p>Home</p></a>
         </li>
         <li>
-          <a href="index.html#about">
-            <p>About Us</p>
-          </a>
+          <a href="index.html#about"><p>About Us</p></a>
         </li>
         <li>
-          <a href="blogpage.html">
-            <p>Blogs</p>
-          </a>
+          <a href="blogpage.html"><p>Blogs</p></a>
         </li>
         <li>
-          <a href="index.html#Resource Library">
-            <p>Resource Library</p>
-          </a>
+          <a href="index.html#Resource Library"><p>Resource Library</p></a>
         </li>
         <li>
-          <a href="index.html#contact">
-            <p>Contact Us</p>
-          </a>
+          <a href="index.html#contact"><p>Contact Us</p></a>
         </li>
       </ul>
     </div>
@@ -142,19 +152,8 @@
       </p>
     </div>
   </footer>
-  <script>
-    window.onload = function () {
-      google.accounts.id.initialize({
-        client_id: '161848051138-1uii574n97v29up5ft2ls36rkofgruq1.apps.googleusercontent.com',
-      });
-      google.accounts.id.renderButton(
-        document.getElementById('g_id_onload'),
-        { theme: 'outline', size: 'large' }
-      );
-    }
-  </script>
   <script src="login.js"></script>
   <script src="script.js"></script>
 </body>
-
 </html>
+
