--- a/login.html
+++ b/login.html
@@ -21,7 +21,7 @@
     ></script>
 </head>
 <body>
-  <header class="header sticky">
+  <header class="header">
     <img
       src="favicon_new.png"
       alt="logo"
@@ -33,7 +33,7 @@
 
     <i class="bx bx-menu" id="menu-icon"></i>
     <nav class="navbar">
-      <a href="index.html#home" 
+      <a href="index.html#home" class="active"
         ><i class="fa-solid fa-house"></i> Home</a
       >
       <a href="index.html#about"><i class="fa-solid fa-circle-info"></i> About</a>
@@ -47,9 +47,6 @@
       <a href="index.html#contact" id="nav--contact"
         ><i class="fa-solid fa-phone"></i> Contact</a
       >
-      <a href="login.html" class="active">
-        <button id="log-in-btn" class="login-btn">Login</button>
-      </a>
     </nav>
   </header>
   
