--- a/faqpage.html
+++ b/faqpage.html
@@ -9,6 +9,7 @@
   <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
   <!-- <link rel="stylesheet" href="style.css" /> -->
   <link rel="stylesheet" href="faqpagestyle.css" />
+  <link rel="icon" href="favicon_new.png" type="image/x-icon" />
   <script src="https://kit.fontawesome.com/b08b6de27e.js" crossorigin="anonymous"></script>
 
 
