button added in html

--- a/blogpage.html
+++ b/blogpage.html
@@ -318,6 +318,7 @@
         </p>
       </div>
     </footer>
+    <button id="scrollToTopBtn" title="Go to top"><i class="fa fa-arrow-up"></i></button>
     <script src="blog.js"></script>
     <script src="script.js"></script>
     <script type="text/javascript">
