--- a/blogpage.html
+++ b/blogpage.html
@@ -16,26 +16,26 @@
     <title>AgroBlogs</title>
     <style>
       #scrollToTopBtn {
-    display: none; /* Hidden by default */
-    position: fixed; /* Fixed position at the bottom right */
+    display: none; 
+    position: fixed; 
     bottom: 20px;
     right: 30px;
-    z-index: 99; /* Ensure it is above other elements */
-    border: none; /* Remove borders */
-    outline: none; /* Remove outline */
-    background-color: #ff7d1f; /* Orange background */
-    color: white; /* White text */
-    cursor: pointer; /* Pointer cursor on hover */
-    padding: 15px; /* Some padding */
-    border-radius: 50%; /* Rounded corners */
-    font-size: 18px; /* Increase font size */
-    transition: background-color 0.3s; /* Smooth transition */
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); /* Add some shadow */
+    z-index: 99; 
+    border: none;
+    outline: none; 
+    background-color: #ff7d1f; 
+    color: white; 
+    cursor: pointer; 
+    padding: 15px;
+    border-radius: 50%; 
+    font-size: 18px;
+    transition: background-color 0.3s;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); 
 }
 
 #scrollToTopBtn:hover {
-    background-color: #555; /* Darker background on hover */
-    color: #ff7d1f; /* Change text color on hover */
+    background-color: #555;
+    color: #ff7d1f; 
 }
     </style>
     
