save the changes

--- a/index.html
+++ b/index.html
@@ -51,12 +51,13 @@
   </header>
 
   <section class="home" id="home">
+    
     <div class="slider">
       <div class="home-content">
         <h3 class="home--welcome">Welcome to</h3>
         <h1 class="home--welcome">AgriLearnNetwork</h1>
         <h3 class="home--welcome">
-          Your Agricultural Knowledge Hub to<br>
+          Your Agricultural Knowledge Hub to
           <span class="multiple-text"></span>
         </h3>
       </div>
