correcting .slider .home-content h3 adding letter-spacing

--- a/index.html
+++ b/index.html
@@ -56,8 +56,9 @@
       <div class="home-content">
         <h3 class="home--welcome">Welcome to</h3>
         <h1 class="home--welcome">AgriLearnNetwork</h1>
-        <h3 class="home--welcome">
-          Your Agricultural Knowledge Hub to
+        <h3 class="home--welcome" style="letter-spacing: .2rem;">
+          Your Agricultural Knowledge Hub to 
+
           <span class="multiple-text"></span>
         </h3>
       </div>
