--- a/index.html
+++ b/index.html
@@ -73,6 +73,11 @@
           <button id="log-in-btn" class="login-btn">Login</button>
         </a>
       </nav>
+      <!-- adding the toggle mode button -->
+      <div class="theme-toggle">
+        <i class="fas fa-sun"></i>
+        <i class="fas fa-moon"></i>
+      </div>
     </header>
 
     <section class="home" id="home">
@@ -512,5 +517,31 @@
         header.classList.toggle("sticky", window.scrollY >10)
       })
     </script>
+
+    <!-- mode toggle function -->
+    <script>
+      document.addEventListener("DOMContentLoaded", function () {
+        const themeToggle = document.querySelector(".theme-toggle");
+        const body = document.body;
+
+        // Load the saved theme from local storage and apply it
+        const savedTheme = localStorage.getItem("theme");
+        if (savedTheme && savedTheme === "dark") {
+          body.classList.add("dark-theme");
+        }
+
+        themeToggle.addEventListener("click", function () {
+          body.classList.toggle("dark-theme");
+
+          // Save the current theme in local storage
+          if (body.classList.contains("dark-theme")) {
+            localStorage.setItem("theme", "dark");
+          } else {
+            localStorage.setItem("theme", "light");
+          }
+        });
+      });
+    </script>
+    
   </body>
 </html>
