--- a/index.html
+++ b/index.html
@@ -290,6 +290,8 @@
       </div>
     </section>
 
+    <!--Contact Section-->
+    
     <section class="contact" id="contact">
       <h2 class="heading">Contact <span>Us!</span></h2>
       <form action="#" id="contact-form">
