Improved the UI of contact section which was merging with the background.
#853

--- a/index.html
+++ b/index.html
@@ -290,6 +290,7 @@
       </div>
     </section>
 
+    <!-- Contact Section -->
     <section class="contact" id="contact">
       <h2 class="heading">Contact <span>Us!</span></h2>
       <form action="#" id="contact-form">
