added animated cursor

--- a/blogpage.html
+++ b/blogpage.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="blogpagestyle.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://kit.fontawesome.com/fb940be696.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./cursor/MS-Cursor-master/style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link
@@ -460,6 +461,7 @@
         header.classList.toggle("sticky", window.scrollY >10)
       })
     </script>
+    <script src="./cursor/MS-Cursor-master/index.js"></script>
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="./scrollreveal.js"></script>
 
