--- a/faqpage.html
+++ b/faqpage.html
@@ -6,10 +6,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>FAQs</title>
+  <link rel="stylesheet" href="./cursor/MS-Cursor-master/style.css" />
   <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
   <!-- <link rel="stylesheet" href="style.css" /> -->
   <link rel="stylesheet" href="faqpagestyle.css" />
   <link rel="icon" href="favicon_new.png" type="image/x-icon" />
+  <script src="./cursor/MS-Cursor-master/index.js"></script>
   <script src="https://kit.fontawesome.com/b08b6de27e.js" crossorigin="anonymous"></script>
 
 
