--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
 
     <link rel="icon" href="favicon_new.png" type="image/x-icon" />
     <link rel="stylesheet" type="text/css" href="./style.css" />
+    <link rel="stylesheet" href="./cursor/MS-Cursor-master/style.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     />
+    <script src="./cursor/MS-Cursor-master/index.js"></script>
     <script
       src="https://kit.fontawesome.com/b08b6de27e.js"
       crossorigin="anonymous"
