faqpage is updated

--- a/faqpage.html
+++ b/faqpage.html
@@ -25,11 +25,11 @@
 
     <i class="bx bx-menu" id="menu-icon"></i>
     <nav class="navbar">
-      <a href="index.html#home" class="active"><i class="fa-solid fa-house"></i> Home</a>
+      <a href="index.html#home"><i class="fa-solid fa-house"></i> Home</a>
       <a href="index.html#about"><i class="fa-solid fa-circle-info"></i> About</a>
       <a href="blogpage.html" target="_self"><i class="fa-solid fa-blog"></i> Blogs</a>
       <a href="index.html#Resource Library"><i class="fa-solid fa-book"></i> Resource Library</a>
-      <a href="faqpage.html" target="_self"><i class="fas fa-question-circle"></i>FAQ</a>
+      <a href="faqpage.html" class="active"><i class="fas fa-question-circle"></i>FAQ</a>
       <a href="index.html#contact" id="nav--contact"><i class="fa-solid fa-phone"></i> Contact</a>
       <a href="login.html">
         <button id="log-in-btn" class="login-btn">Login</button>
