--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         <div class="portfolio-box">
           <h4 class="portfolio-heading">Sowing Techniques</h4>
           <img
-            src="images/25803500_1621011873.jpg"
+            src="images/tech.png"
             alt="PROJECT-IMG"
             border="0"
           />
@@ -169,7 +169,7 @@
         <div class="portfolio-box">
           <h4 class="portfolio-heading">Essential tools for sowing</h4>
           <img
-            src="images/Best-Hand-Operated-Seeding-Machines-in-India4.jpg"
+            src="images/tools.png"
             alt="PROJECT-IMG"
             border="0"
           />
@@ -186,7 +186,7 @@
 
         <div class="portfolio-box">
           <h4 class="portfolio-heading">Farm management</h4>
-          <img src="images/Farm-Management.png" alt="PROJECT-IMG" />
+          <img src="images/farms.png" alt="PROJECT-IMG" />
           <div class="portfolio-layer">
             <iframe
               width="407"
@@ -200,7 +200,7 @@
 
         <div class="portfolio-box">
           <h4 class="portfolio-heading">Seasonal plant guide</h4>
-          <img src="images/iStock-1179642020-1024x683.jpg" alt="PROJECT-IMG" />
+          <img src="images/seasonal.png" alt="PROJECT-IMG" />
           <div class="portfolio-layer">
             <iframe
               width="407"
@@ -214,7 +214,7 @@
 
         <div class="portfolio-box">
           <h4 class="portfolio-heading">Crop care & maintenance</h4>
-          <img src="images/insects-on-a-field.jpg" alt="PROJECT-IMG" />
+          <img src="images/crops.png" alt="PROJECT-IMG" />
           <div class="portfolio-layer">
             <iframe
               width="407"
@@ -228,7 +228,7 @@
 
         <div class="portfolio-box">
           <h4 class="portfolio-heading">Livestock management</h4>
-          <img src="images/tab-04.jpg" alt="PROJECT-IMG" />
+          <img src="images/livestock.png" alt="PROJECT-IMG" />
           <div class="portfolio-layer">
             <iframe
               width="407"
@@ -242,7 +242,7 @@
 
         <div class="portfolio-box">
           <h4 class="portfolio-heading">Irrigation Techniques</h4>
-          <img src="images/Methods-of-Irrigation.jpg" alt="PROJECT-IMG" />
+          <img src="images/Irrigation.png" alt="PROJECT-IMG" />
           <div class="portfolio-layer">
             <iframe
               width="407"
@@ -257,7 +257,7 @@
         <div class="portfolio-box">
           <h4 class="portfolio-heading">Organic farming</h4>
           <img
-            src="images/organic-farming-definition-examples-.jpg"
+            src="images/organic.png"
             alt="PROJECT-IMG"
           />
           <div class="portfolio-layer">
@@ -274,7 +274,7 @@
         <div class="portfolio-box">
           <h4 class="portfolio-heading">Climate smart Farming</h4>
           <img
-            src="images/Things-You-Should-Know-About-Smart-Agriculture.jpeg"
+            src="images/climate.png"
             alt="PROJECT-IMG"
           />
           <div class="portfolio-layer">
