--- a/index.html
+++ b/index.html
@@ -13,12 +13,15 @@
 
     <link rel="icon" href="favicon_new.png" type="image/x-icon" />
     <link rel="stylesheet" type="text/css" href="./style.css" />
-    <link rel="stylesheet" href="./cursor/MS-Cursor-master/style.css" />
+  
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     />
-    <script src="./cursor/MS-Cursor-master/index.js"></script>
+    <link rel="stylesheet" href="./cursor/style.css">
+
+    <!-- <script src="./cursor/script.js"></script> -->
+    
     <script
       src="https://kit.fontawesome.com/b08b6de27e.js"
       crossorigin="anonymous"
@@ -40,6 +43,7 @@
   </head>
 
   <body>
+  
     <div id="loader-wrapper">
       <div id="loader"></div>
       <div class="loader-section section-left"></div>
@@ -57,7 +61,7 @@
 
       <i class="bx bx-menu" id="menu-icon"></i>
       <nav class="navbar">
-        <a href="#home" class="active"
+        <a href="#home" class="active content"
           ><i class="fa-solid fa-house"></i> Home</a
         >
         <a href="#about"><i class="fa-solid fa-circle-info"></i> About</a>
@@ -79,7 +83,7 @@
 
     <section class="home" id="home">
       <div class="slider">
-        <div class="home-content">
+        <div class="home-content content">
           <h3 class="home--welcome">Welcome to</h3>
           <h1 class="home--welcome">AgriLearnNetwork</h1>
           <h3 class="home--welcome">
@@ -427,6 +431,8 @@
     <div  id="backtoTop">
       <a href="#home"><i class="bx bx-up-arrow-alt"></i></a>
     </div>
+    <div class="cursor"></div>
+    <div class="cursor2"></div>
 
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
@@ -514,6 +520,13 @@
         var header= document.querySelector("header");
         header.classList.toggle("sticky", window.scrollY >10)
       })
+    </script>
+     <script>
+      var cursor = document.querySelector(".cursor");
+      var cursor2 = document.querySelector(".cursor2");
+      document.addEventListener("mousemove",function(e){
+        cursor.style.cssText = cursor2.style.cssText = "left: " + e.clientX + "px; top: " + e.clientY + "px;";
+      });
     </script>
   </body>
 </html>
