--- a/login.html
+++ b/login.html
@@ -18,6 +18,7 @@
 
     <link rel="icon" href="favicon_new.png" type="image/x-icon" />
     <link rel="stylesheet" type="text/css" href="./style.css" />
+    <link rel="stylesheet" href="./cursor/style.css">
     <script
       src="https://kit.fontawesome.com/b08b6de27e.js"
       crossorigin="anonymous"
@@ -169,8 +170,17 @@
           by AgriLearnNetwork | All Rights Reserved.
         </p>
       </div>
+      <div class="cursor"></div>
+    <div class="cursor2"></div>
     </footer>
     <script src="login.js"></script>
     <script src="script.js"></script>
+    <script>
+      var cursor = document.querySelector(".cursor");
+      var cursor2 = document.querySelector(".cursor2");
+      document.addEventListener("mousemove",function(e){
+        cursor.style.cssText = cursor2.style.cssText = "left: " + e.clientX + "px; top: " + e.clientY + "px;";
+      });
+    </script>
   </body>
 </html>
