--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
 
         <div class="portfolio-box">
           <h4 class="portfolio-heading">Irrigation Techniques</h4>
-          <img src="images/Irrigation.png" alt="PROJECT-IMG" />
+          <img src="images/Irrig.png" alt="PROJECT-IMG" />
           <div class="portfolio-layer">
             <iframe
               width="407"
