Search icon changed

--- a/blogpage.html
+++ b/blogpage.html
@@ -70,7 +70,7 @@
          <!--search bar-->
       <div class="search z3">
         <input id="input" class="search-bar" placeholder="Search Blogs" oninput="search()"/>
-        <img id="search-icon" src="./images/search icon.jpg"/>
+        <img id="search-icon" src="./images/search.png"/>
         </div>
         
     <div class="services-box">
