--- a/index.html
+++ b/index.html
@@ -91,12 +91,12 @@
 
     <section class="home" id="home">
       <div class="slider">
-        <div class="home-content content">
+        <div class="home-content content glow">
           <h3 class="home--welcome">Welcome to</h3>
           <h1 class="home--welcome">AgriLearnNetwork</h1>
           <h3 class="home--welcome">
             Your Agricultural Knowledge Hub to
-            <span class="multiple-text"></span>
+            <span class="multiple-text un "></span>
           </h3>
         </div>
         <div class="slide_viewer">
