--- a/blogpage.html
+++ b/blogpage.html
@@ -69,7 +69,7 @@
     <section class="farm"> 
          <!--search bar-->
       <div class="search z3">
-        <input id="input" class="search-bar" placeholder="Search Blogs" oninput="search()"/>
+        <input id="input" class="search-bar" placeholder="What are you looking for" oninput="search()"/>
         <img id="search-icon" src="./images/search.png"/>
         </div>
         
